fix profile footer not stretching to whole page

--- a/themes/Hugo-Now-UI-Pro/assets/scss/custom/custom.scss
+++ b/themes/Hugo-Now-UI-Pro/assets/scss/custom/custom.scss
@@ -210,3 +210,7 @@ div.row.row-logos > div > a > img{
 	max-width: 220px;
 	height: 50px;
 }
+
+.profile-page .content{
+	max-width: none;
+}
